--- a/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-commitform.html
@@ -1,25 +1,21 @@
-<!-- Modal -->
-<div id="repo-commit-{{ item.name }}" tabindex="-1" class="modal fade" role="dialog" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+{% extends "app/layout.html" %}
 
-    <!-- Modal content-->
-    <div class="modal-content">
+{% block content %}
 
+ <div class="row">
 
         <section id="commitForm">
             <form action="{% url 'notebooks-commit' %}" method="post" class="form-horizontal" onsubmit="collectCheckedElements()">
                 {% csrf_token %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Commit Changes</h4>
+                        <h4>Commit Changes for {{ project.name }}</h4>
                     </div>
                     <div class="panel-body">
 
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <label for="id_message" class="col-md-4 control-label">Commit message: </label>
                                     <div class="col-md-8">
                                         <input id="id_message" type="text" name="message" value="Update the project file(s)">
                                     </div>
@@ -28,17 +24,18 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
+
                                 <h4> Files to commit:</h4>
                                 <div class="form-group">
-                                    {% for committable in item.committable_dict.d %}
+                                    {% for committable in committable_dict.d %}
                                         <input type="checkbox" value="deleted" name="{{ committable }}">
                                         {{ committable }} (deleted)<br>
                                     {% endfor %}
-                                    {% for committable in item.committable_dict.m %}
+                                    {% for committable in committable_dict.m %}
                                         <input type="checkbox" value="modified" name="{{ committable }}">
                                         {{ committable }} (modified)<br>
                                     {% endfor %}
-                                    {% for committable in item.committable_dict.u %}
+                                    {% for committable in committable_dict.u %}
                                         <input type="checkbox" value="untracted" name="{{ committable }}">
                                         {{ committable }} (untracted/renamed/new)<br>
                                     {% endfor %}
@@ -46,21 +43,17 @@
                             </div>
                             </div>
 
-                        <div class="modal-footer">
+                        <div>
 
-                            <div class="form-group">
-                                    <input type="hidden" name="repo_dir" value="{{ item.repo_dir }}" />
-                                    <input type="hidden" name="project_name" value="{{ item.notebook.project_name }}" />
-                                    <input type="hidden" name="is_forked" value="{{ is_forked }}" />
-                                    <input type="hidden" name="project_id" value="{{ item.id }}" />
+                            <div class="form-group" style="text-align: left;">
+                                    <input type="hidden" name="project_id" value="{{ project.id }}" />
                                     <input type="hidden" name="target_id" value="{{ target_id }}" />
-                                    <input type="hidden" name="notebook_path_dir" value="{{ notebook_path_dir }}" />
                                     <input type="hidden" name="modified_files" value="" />
                                     <input type="hidden" name="deleted_files" value="" />
                                     <input type="hidden" name="commitall" value="false" />
 
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                     <input type="submit" name="commitall" value="Commit and push" class="btn btn-primary" />
+                                    <input type="submit" name="cancel" value="Cancel" class="btn btn-secondary" />
                             </div>
                         </div>
 
@@ -69,8 +62,6 @@
             </form>
         </section>
     </div>
-  </div>
-</div>
 
 
     <script>
@@ -101,3 +92,4 @@
         }
     </script>
 
+{% endblock %}
