--- a/kooplexhub/kooplex/hub/templates/app/notebooks-delete-project.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-delete-project.html
@@ -1,5 +1,5 @@
 ﻿<!-- Modal -->
-<div id="delete-project-{{ item.name }}" class="modal fade" role="dialog">
+<div id="delete-project-{{ item.id }}" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
