Rewritten html and functions for new models

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -37,8 +37,8 @@
                     </div>
                     <div class="form-group">
                         <label for="project_public">Make it public?</label><br>
-                        <input type="radio" name="project_public" value="public" checked> Yes<br>
-                        <input type="radio" name="project_public" value="private" > No<br>
+                        <input type="radio" name="project_public" value="public" > Yes<br>
+                        <input type="radio" name="project_public" value="private" checked> No<br>
                     </div>
                 </fieldset>
               </div>
