safename for projects (html...); shared folder fix

--- a/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
@@ -1,5 +1,5 @@
 ﻿<!-- Modal -->
-<div id="change-image-{{ item.name }}" class="modal fade" role="dialog">
+<div id="change-image-{{ item.safename }}" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
