--- a/kooplexhub/kooplex/hub/templates/app/layout.html
+++ b/kooplexhub/kooplex/hub/templates/app/layout.html
@@ -21,20 +21,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="{% url 'home' %}" class="navbar-brand">Kooplex Hub</a>
+                <!--a href="{% url 'home' %}" class="navbar-brand">Kooplex Hub</a-->
+                <a href="{% url 'notebooks' %}" class="navbar-brand">Kooplex Hub</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <!-- <li><a href="{% url 'home' %}">Home</a></li> -->
                     <li><a href="{% url 'worksheets' %}">Reports</a></li>
-                    {% if username %}
+                    {% if user.username %}
                         <li><a href="{% url 'notebooks' %}">Notebooks</a></li>
                         <li><a href="/gitlab" target="_blank">Gitlab</a></li>
                         <li><a href="/owncloud" target="_blank">Owncloud</a></li>
                         <!--<li><a href="{% url 'about' %}">About</a></li>
                         <li><a href="{% url 'contact' %}">Contact</a></li> -->
-                        {% if admin %}
-                            <li><a href="{% url 'admin' %}">ADMIN</a></li>
+                        {% if user.is_superuser %}
+                            <li><a href="{% url 'usermanagement-form' %}">Admin</a></li>
                         {% endif %}
                     {% endif %}
                 </ul>
